<resources>
    <string name="app_name">NikeStore</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">اطلاعات کاربری</string>
    <string name="latest">جدیدترین</string>
    <string name="viewAll">مشاهده همه</string>
    <string name="viewAllComments">مشاهده همه نظرات</string>
    <string name="default_description">این کتونی شدیدا برای دویدن و راه رفتن مناسب هست ، همچنین هیچ فشار مخربی رو اجازه نمیده که به پا و زانوی شما منتقل بشه .</string>
    <string name="comments">نظرات کاربران</string>
    <string name="insertComment">ثبت نظر</string>
    <string name="productList">لیست محصولات</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortLatest">جدیدترین</string>
    <string name="sortPopular">پربازدیدترین</string>
    <string name="sortPriceHighToLow">گران ترین</string>
    <string name="sortPriceLowToHigh">ارزان ترین</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="unknownError">خطای نامشخص</string>
    <string name="successAddToCart">به سبد خرید اضافه شد</string>
    <string name="loginScreenTitle">ورود به حساب کاربری</string>
    <string name="loginTitle">ورود به حساب</string>
    <string name="loginHint">قبلا ثبت نام کردید؟</string>
    <string name="authHint">ایمیل و رمز عبور خود را وارد کنید</string>
    <string name="signUpScreenTitle">ایجاد حساب کاربری</string>
    <string name="signUpTitle">ثبت نام</string>
    <string name="signUpHint">حساب کاربری ندارید ؟</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="checkout">پرداخت</string>
    <string name="count">تعداد</string>
    <string name="removeFromCart">حذف از سبد خرید</string>
    <string name="purchaseDetail">جزئیات خرید</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="payablePrice">مبلغ قابل پرداخت</string>
    <string name="shippingCost">هزینه ارسال</string>
    <string name="cartEmptyStateLoginRequired">وارد حساب کاربری خود شوید</string>
    <string name="cartEmptyStateCallToAction">ورود به حساب کاربری</string>
    <string name="cartEmptyState">هیچ خبری اینجا نیست!</string>
    <string name="shippingToolbarTitle">انتخاب تحویل گیرنده و شیوه پرداخت</string>
    <string name="onlinePayment">پرداخت اینترنتی</string>
    <string name="cashOnDelivery">پرداخت در محل</string>

    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="postalCode">کد پستی</string>
    <string name="phoneNumber">شماره تلفن همراه</string>
    <string name="address">آدرس</string>
    <string name="checkoutToolbarTitle">رسید پرداخت</string>
    <string name="returnHome">بازگشت به صفحه اصلی</string>
    <string name="orderHistory">سوابق سفارش</string>
    <string name="purchaseStatus">وضعیت سفارش</string>
    <string name="price">مبلغ</string>
    <string name="favorites">لیست علاقه مندی ها</string>
    <string name="analytics">تحلیل و آمار</string>
    <string name="signIn">ورود به حساب کاربری</string>
    <string name="signOut">خروج از حساب کاربری</string>
    <string name="guestUser">کاربر مهمان</string>
    <string name="favorites_empty_state_message">هنوز محصولی به لیست علاقه مندی اضافه نکردی</string>
    <string name="analytics_empty_state_message">داده ای اضافه نشده</string>
    <string name="favorites_help_message">برای حذف محصول انگشت خود را بر روی آن نگه دارید</string>

    <string-array name="sortTitlesArray">
        <item>@string/sortLatest</item>
        <item>@string/sortPopular</item>
        <item>@string/sortPriceHighToLow</item>
        <item>@string/sortPriceLowToHigh</item>
    </string-array>

</resources>