<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_nike_logo"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signUpScreenTitle"
            android:textAppearance="?textAppearanceHeadline5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:text="@string/authHint"
            android:layout_marginTop="8dp"
            android:textAppearance="?textAppearanceBody1" />

        <EditText
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:layout_marginTop="24dp"
            android:hint="@string/email" />

        <EditText
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:layout_marginTop="16dp"
            android:hint="@string/password" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/signUpTitle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:text="@string/loginHint"
            android:textAppearance="?textAppearanceBody1"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/primary_bold"
            android:text="@string/loginTitle" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>