<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".feature.shipping.ShippingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.example.nikestore.view.NikeToolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:nt_title="@string/shippingToolbarTitle" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp"
        android:clipToPadding="false"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameEtl"
                style="@style/shippingTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEt"
                    style="@style/shippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="حمیدرضا"
                    android:hint="@string/firstName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameEtl"
                style="@style/shippingTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEt"
                    style="@style/shippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:text="کریمی"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalCodeEtl"
                style="@style/shippingTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postalCodeEt"
                    style="@style/shippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:text="1634597864"
                    android:layout_height="wrap_content"
                    android:hint="@string/postalCode" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberEtl"
                style="@style/shippingTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEt"
                    style="@style/shippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:text="09395513744"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNumber" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressEtl"
                style="@style/shippingTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressEt"
                    style="@style/shippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:text="خیابان شریعتی، پایین تر از خیابان بهار شیراز"
                    android:layout_height="wrap_content"
                    android:hint="@string/address" />

            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/purchaseDetailView"
                layout="@layout/item_purchase_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/codBtn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cashOnDelivery" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onlinePaymentbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/onlinePayment" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>