<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.checkout.CheckOutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.example.nikestore.view.NikeToolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:nt_title="@string/checkoutToolbarTitle" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="32dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/purchaseStatusTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAppearance="?textAppearanceHeadline5"
                android:textColor="?colorPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="پرداخت با موفقیت انجام شد" />

            <TextView
                android:id="@+id/orderStatusTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/purchaseStatus"
                android:textAppearance="?textAppearanceBody1"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/purchaseStatusTv" />

            <TextView
                android:id="@+id/orderStatusTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@id/orderStatusTitleTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/orderStatusTitleTv"
                tools:text="انجام شده" />

            <View
                android:id="@+id/orderDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?dividerColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderStatusTitleTv" />

            <TextView
                android:id="@+id/orderPriceTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/price"
                android:textAppearance="?textAppearanceBody1"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintStart_toStartOf="@id/orderStatusTitleTv"
                app:layout_constraintTop_toBottomOf="@id/orderDivider"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/orderPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@id/orderPriceTitleTv"
                app:layout_constraintEnd_toEndOf="@id/orderStatusTv"
                app:layout_constraintTop_toTopOf="@id/orderPriceTitleTv"
                tools:text="123,456,650" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/returnHomeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/returnHome"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/orderHistoryBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/orderHistory"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>