<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.list.ProductListActivity"
    android:layoutDirection="rtl">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.example.nikestore.view.NikeToolbar
            android:id="@+id/toolbarView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:nt_title="@string/productList"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerColor"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <View
                android:id="@+id/sortBtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?selectableItemBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/gridIv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/sortIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_sort" />

            <TextView
                android:id="@+id/sortTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toTopOf="@+id/selectedSortTv"
                app:layout_constraintStart_toEndOf="@id/sortIv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:text="@string/sort" />

            <TextView
                android:id="@+id/selectedSortTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="12sp"
                android:textColor="?android:textColorSecondary"
                android:textAppearance="?textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/sortIv"
                app:layout_constraintTop_toBottomOf="@+id/sortTitleTv"
                tools:text="@string/sortLatest" />

            <ImageView
                android:id="@+id/gridIv"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="?selectableItemBackground"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_grid" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="?attr/dividerColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/gridIv"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productListRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:clipToPadding="false"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>